--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  transition: all 0.3s;
 }
 .active {
   background-color: #ffe3e3;
@@ -130,4 +131,8 @@ body {
 }
 .hidden {
   display: none;
+}
+.player--winner {
+  background-color: #333;
+  opacity: 100%;
 }
